[package]
name = "nbt-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.nbt]
path = "../nbt"

[dependencies]
eframe = "0.27.2"
egui_dock = "0.12.0"
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"
